--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,3 +25,17 @@
     color: white;
 }
 
+.hide {
+    width: 2.5rem;
+    margin: 0 auto;
+    place-self: center;
+    position: absolute;
+    margin-right: 1rem;
+}
+.show {
+    width: 2.5rem;
+    margin: 0 auto;
+    place-self: center;
+    position: absolute;
+    margin-right: 1rem;
+}
