--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,9 @@
                         <h1 style="color: white;width: 12rem;text-align: center;">Username:</h1>
                         <input type="text" aria-placeholder="enter Username" style="width: 25rem;margin: 10px;border-radius: 20px;height: 3.5rem;place-self: center;padding-left: 10px;font-size: 1.5rem;align-self: center;border: 1px solid;">
                         <h1 style="color: white;width: 12rem;text-align: center;">Password:</h1>
-                        <input type="text" aria-placeholder="enter Password" style="width: 25rem;margin: 10px;border-radius: 20px;height: 3.5rem;place-self: center;padding-left: 10px;font-size: 1.5rem;align-self: center;border: 1px solid;">
+                        <div style="place-self: center; display: flex; flex-direction: row-reverse; width: fit-content;"> <input type="password" id="password" aria-placeholder="Enter Password" style="width: 25rem; margin: 10px; border-radius: 20px; height: 3.5rem; place-self: center; padding-left: 10px; font-size: 1.5rem; align-self: center; border: 1px solid;"> <img class="hide" id="hideIcon" src="/static/images/hide.png" alt="Hide" onclick="togglePassword()" style="cursor: pointer;"> <img class="show" id="showIcon" src="/static/images/show.png" alt="Show" onclick="togglePassword()" style="display: none; cursor: pointer;"> </div>
+                        
+                        
                         <button type="submit" class="btn btn-primary" id="loginBtn"> Login </button>
                     </form>
             </div>
