--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,8 @@
                     <a href="/" class="logo-box" style="width: auto;">
                         <img src="/static/images/softcare.png" style="width: 9rem;" alt="Logo">
                     </a><div style="grid-column: 2;place-self: center;padding: 10px;"><h1 style="font-weight: bold;margin: 0;">SOFTCARE HOSPITAL</h1><p style="font-size: 1.5rem;margin: 0;">Medical Help In Low Cost</p></div>
-                    <form class="login_container" style="grid-column: span 2; background: #00000087; border-radius: 4px; padding: 5px; display: grid;">
+                    <form class="login_container" style="grid-column: span 2; background: #00000087; border-radius: 4px; padding: 12px; display: grid;">
+                        <div class="handling_prompt" style="width: -webkit-fill-available;text-align: center;"></div>
                         <h1 style="color: white;width: 12rem;text-align: center;">Username:</h1>
                         <input id="username" type="text" aria-placeholder="Enter Username" style="width: 25rem; margin: 10px; border-radius: 20px; height: 3.5rem; place-self: center; padding-left: 10px; font-size: 1.5rem; align-self: center; border: 1px solid;">
                         
