--- a/templates/local_user.html
+++ b/templates/local_user.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-    <h1 id="message">Hello Local User</h1>
+    <!-- <h1 id="message">Hello Local User</h1> -->
 
     <script>
         // Fetch session data from the server
