--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <div class="" style="display: grid;width: fit-content;padding: 15px;row-gap: 10px;">
                     <a href="/" class="logo-box" style="width: auto;">
                         <img src="/static/images/softcare.png" style="width: 9rem;" alt="Logo">
-                    </a><div style="grid-column: 2;place-self: center;padding: 10px;"><h1 style="font-weight: bold;margin: 0;">SOFTCARE HOSPITAL</h1><p style="font-size: 1.5rem;margin: 0;">Medical Help In Low Cost</p></div>
+                    </a><div style="grid-column: 2;place-self: center;padding: 10px;"><h1 style="font-weight: bold;margin: 0; color:#0c4b7a;">SOFTCARE HOSPITAL</h1><p style="font-size: 1.5rem;margin: 0; color:#545454; text-align: center;">Medical Help In Low Cost</p></div>
                     <form class="login_container" style="grid-column: span 2; background: #00000087; border-radius: 4px; padding: 12px; display: grid;">
                         <div class="handling_prompt" style="width: -webkit-fill-available;text-align: center;"></div>
                         <h1 style="color: white;width: 12rem;text-align: center;">Username:</h1>
